--- a/package.json
+++ b/package.json
@@ -12,28 +12,39 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.9",
+    "@mui/material": "^5.10.10",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.2",
+    "@prisma/client": "^4.5.0",
     "core-js": "^3.6.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "15.0.0",
     "@nrwl/cypress": "15.0.0",
     "@nrwl/eslint-plugin-nx": "15.0.0",
-    "@nrwl/jest": "15.0.0",
+    "@nrwl/jest": "15.0.1",
     "@nrwl/linter": "15.0.0",
+    "@nrwl/nest": "15.0.1",
     "@nrwl/next": "^15.0.0",
+    "@nrwl/node": "15.0.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.0.0",
     "@nrwl/web": "15.0.0",
     "@nrwl/workspace": "15.0.0",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.1",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -52,6 +63,7 @@
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.0.0",
     "prettier": "^2.6.2",
+    "prisma": "^4.5.0",
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
     "ts-jest": "28.0.5",
