--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@prisma/client": "^4.5.0",
+    "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "next": "12.3.1",
     "react": "18.2.0",
