--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/swagger": "^6.1.2",
     "@prisma/client": "^4.5.0",
     "axios": "^1.1.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "next": "12.3.1",
