--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "nx build",
     "test": "nx test"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} apps/library-service/prisma/seed.ts"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -47,7 +50,7 @@
     "@nrwl/workspace": "15.0.0",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.7.1",
+    "@types/node": "^18.11.9",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -70,7 +73,7 @@
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
     "ts-jest": "28.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
