--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@prisma/client": "^4.5.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "axios": "^1.1.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "moment": "^2.29.4",
     "next": "12.3.1",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
@@ -55,6 +59,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
