--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.10",
     "@mui/x-date-pickers": "^5.0.6",
     "@nestjs/common": "^9.0.0",
