--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.4",
     "next": "12.3.1",
     "next-redux-wrapper": "^7.0.5",
+    "prisma-dbml-generator": "^0.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^7.2.6",
